# sphinx-reredirects

./: .gitignore  .gitlab-ci.yml  .prettierignore  LICENSE  README.md  README.rst  noxfile.py  package-lock.json  package.json  pyproject.toml  releasing.md  releasing.rst  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: docs.yaml  publish-docs.yaml  publish-to-pages.yaml  release.yaml  sphinx-gh-pages.yaml  test-lint.yml  test.yaml  tests.yml
.husky/: pre-commit
docs/: .copier-answers.yml  .gitignore  changelog.rst  conf.py  faq.rst  index.md  index.rst  install.rst  noxfile.py  pyproject.toml  requirements.txt  rn.rst  robots.txt  usage.rst
docs/_templates/: layout.html
docs/vendors/: sphinx_documattcom_theme-1.1.1-py3-none-any.whl  sphinx_null_theme-0.1.0-py3-none-any.whl
sphinx_reredirects/: __init__.py
tests/: conftest.py  test_end2end.py  test_placeholders.py  test_wildcards.py
tests/roots/test-dirhtml/: index.rst  installing.rst
tests/roots/test-linkcheck/: conf.py  index.rst  install.rst  rn.rst
tests/roots/test-redirects/: conf.py  index.rst
tests/roots/test-redirects/faq/: one.rst  two.rst
