[project]
name = "sphinx-reredirects"
dynamic = ["version", "description"]
readme = "README.md"
license = "MIT"
maintainers = [
  {name = "Libor Jelínek", email = "liborjelinek@documatt.com"}
]
requires-python = ">=3.11"
dependencies = [
    "sphinx>=7.4,<9.0",
]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://documatt.com/sphinx-reredirects/"
repository = "https://github.com/documatt/sphinx-reredirects"

[dependency-groups]
dev = [
    "flit==3.12.0",
    "mypy==1.16.0",
    "nox==2025.5.1",
    "pytest==8.3.5",
    "ruff==0.11.12",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
