[project]
name = "sphinx-reredirects-docs"
version = "0.1.0"
dependencies = [
    "sphinx==8.1.3",
    "myst-parser==4.0.0",
    "linkify-it-py==2.0.3",
    "sphinx-design==0.6.1",
    "sphinx_copybutton==0.5.2",
    "sphinxcontrib.mermaid==1.0.0",
    "sphinx-reredirects==0.1.5",
    "sphinx-sitemap==2.6.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-null-theme",
    "sphinx-documattcom-theme",
]
requires-python = ">=3.11"

[dependency-groups]
dev = ["nox>=2025.2.9", "sphinx-autobuild==2024.10.3", "sphinx-intl==2.2.0"]

[tool.uv.sources]
sphinx-null-theme = { path = "vendors/sphinx_null_theme-0.1.0-py3-none-any.whl" }
sphinx-documattcom-theme = { path = "vendors/sphinx_documattcom_theme-1.1.1-py3-none-any.whl" }
